--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,19 @@ body{
   padding: 0;
 }
 
+header{
+  background-color: white;
+  align-items: center;
+  padding: 5px 5px;
+  height: 50px;
+}
+
 .container{
   max-width: 1200px; /* Set the maximum width of the container */
   margin: 0 auto; /* Center the container */
   padding: 0 15px; /* Add padding on the left and right sides of the container */
   position: relative; /* Keeps the container within its own flow, but allows the absolute element to work */
+  display: flex;
 }
 
 /* Make it responsive*/
@@ -24,17 +32,18 @@ body{
   }
 }
 
-header{
+/*header{
   background-color: white;
   align-items: center;
-  padding: 10px 10px; /* Add padding on the top and bottom of the header */
+  padding: 10px 10px; 
   height: 60px;
   display: flex;
-}
+}*/
 
 #logo{
-  width: 90px;
-  height: 90px;
+  width: 70px;
+  height: 70px;
+  margin: 0 10px;
   display: block;
   margin-right: 15px;
   background-color: transparent;
@@ -83,7 +92,7 @@ header{
 .divider{
   height: 1px;
   background-color: #3a3b3c;
-  margin-top: 10px;
+  margin-top: 5px;
   width: 100%;
   position: absolute; /* Removes the divider from the normal document flow */
   top: 100%; /* Position the divider at the bottom of the header */
